# safe

./: .gitignore  DevNotes.md  README.md  Roadmap.md  Status.md  cargo.toml  svv2sandbox.py
.github/workflows/: test.yml
media/: diagrams.pptx
safe/: Cargo.toml
safe/src/: c2.rs  config.rs  definitions.rs  flight.rs  main.rs  observability.rs  router.rs  simulation.rs  transports.rs  utils.rs
safe/src/kits/: mod.rs  montecarlo.rs  optimization.rs  stats.rs
safe/src/modes/: attitude_control_anomaly_recovery.rs  collision_avoidance.rs  contact_analysis.rs  mod.rs  multi_objective_optimization.rs  noop.rs
safectl/: Cargo.toml
safectl/src/: main.rs
